--- a/installer/Multicrew/PMDG_737NG_Main.ini
+++ b/installer/Multicrew/PMDG_737NG_Main.ini
@@ -1,22 +1,22 @@
 [fsuipc]
-1=0xbdc,4,1 # flaps control
-2=0xbd0,4,0 # spoiler control
-3=0xbb2,2,0 # elevator control
-4=0xbb6,2,0 # ailerons control
-5=0xbba,2,0 # rudder control
-6=0xbc8,2,1 # parking brake
-7=0xbe8,4,1 # gears commanded
-8=0x88c,8,1 # engine 1
-9=0x924,8,1 # engine 2
-10=0x3bfc,4,1 # ZFW
-11=0x280,2,1 # nav + strobe lights 
-12=0x28c,2,1 # landing lights
-13=0xd0c,4,1 # light (FS2000+)
-14=0x281c,2,1 # master battery switch
-15=0x2e80,4,1 # avionics master switch
-16=0x3100,4,1 # alternator,battery,avionics
-17=0x2e80,4,1 # avionics master switch
-18=0x3125,4,1 # fuel pumps
+1=0xbdc,4,1 // flaps control
+2=0xbd0,4,0 // spoiler control
+3=0xbb2,2,0 // elevator control
+4=0xbb6,2,0 // ailerons control
+5=0xbba,2,0 // rudder control
+6=0xbc8,2,1 // parking brake
+7=0xbe8,4,1 // gears commanded
+8=0x88c,8,1 // engine 1
+9=0x924,8,1 // engine 2
+10=0x3bfc,4,1 // ZFW
+11=0x280,2,1 // nav + strobe lights 
+12=0x28c,2,1 // landing lights
+13=0xd0c,4,1 // light (FS2000+)
+14=0x281c,2,1 // master battery switch
+15=0x2e80,4,1 // avionics master switch
+16=0x3100,4,1 // alternator,battery,avionics
+17=0x2e80,4,1 // avionics master switch
+18=0x3125,4,1 // fuel pumps
 
 [EFISDisplay]
 metafile=1
