* multicrewprepare is history. No gauges are copied anymore. Proxying now works by hooking LoadLibraryA and setting module_init and module_deinit just after loading the library. * no switching between host and client mode anymore which is visible to the user. The gauge proxies can work in any mode and switch in place between them.

--- a/installer/Multicrew/PMDG_737NG_Main.ini
+++ b/installer/Multicrew/PMDG_737NG_Main.ini
@@ -19,6 +19,72 @@
 18=0x3125,4,1 // fuel pumps
 
 [EFISDisplay]
+hookmouse=0
+//swallowmouse=1
+
+[EFISDisplay!PFD 1]
 metafile=1
-element=0
-swallowmouse=1
+[EFISDisplay!PFD ZOOM]
+metafile=1
+[EFISDisplay!PFD APP]
+metafile=1
+[EFISDisplay!PFD POPUP]
+metafile=1
+
+[EFISDisplay!ND 1]
+metafile=2
+[EFISDisplay!ND ZOOM]
+metafile=2
+[EFISDisplay!ND APP]
+metafile=2
+[EFISDisplay!ND POPUP]
+metafile=2
+
+[EFISDisplay!EICAS 1]
+metafile=3
+[EFISDisplay!EICAS ZOOM]
+metafile=3
+[EFISDisplay!EICAS POPUP]
+metafile=3
+
+[EFISDisplay!LEICAS POPUP]
+metafile=4
+
+[PanelSwitcher]
+hookmouse=0
+
+[CDU]
+verbose=1
+metafileelement=7
+metafileminimum=300
+
+[CDU!L]
+verbose=1
+metafile=5
+metafileelement=7
+metafileminimum=300
+
+[CDU!L VC]
+verbose=1
+metafile=5
+metafileelement=7
+metafileminimum=300
+
+[CDU!R]
+verbose=1
+metafile=6
+metafileelement=7
+metafileminimum=300
+
+[CDU!R VC]
+verbose=1
+metafile=6
+metafileelement=7
+metafileminimum=300
+
+[metafile]
+delay1=200
+delay2=700
+delay2=1000
+delay5=50
+delay6=50
